# oi-firmware

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  Arduino.patch  CHANGELOG.md  CMakeLists.txt  Dockerfile  Makefile  README.md  apply_patch.py  build_examples.sh  copy_binaries.py  library.json  partition.csv  partitions.csv  platformio.ini  sdkconfig.ci.defaults.analogls  sdkconfig.ci.defaults.core  sdkconfig.ci.defaults.dc  sdkconfig.ci.defaults.discrete  sdkconfig.ci.defaults.discreteve  sdkconfig.ci.defaults.mixed  sdkconfig.ci.defaults.oi_stepper  sdkconfig.ci.defaults.relayhp  sdkconfig.ci.defaults.relaylp  sdkconfig.defaults  toolchain.cmake  version.txt
components/api/: BusCmdTypes.h  CMakeLists.txt  Command.h  Common.h  Definitions.h  Global.h  HAL.h  Kconfig  Kconfig.projbuild  OIBus.cpp  OIBus.h  OICAN.cpp  OICAN.h  OICommand.cpp  OICommand.h  OIConsole.cpp  OIConsole.h  OICore.cpp  OICore.h  OIDiscrete.cpp  OIDiscrete.h  OIEtor.h  OIFlash.cpp  OIFlash.h  OIFunction.cpp  OIFunction.h  OIMain.cpp  OIMessage.h  OIMixed.cpp  OIMixed.h  OIModule.cpp  OIModule.h  OIProtocol.h  OIRS.cpp  OIRS.h  OIRelay.cpp  OIRelay.h  OIStepper.cpp  OIStepper.h  OIStor.h  (+10 more)
components/api/BusControl/: BusControl.h
components/api/BusCtrl/: BusCtrl.h
components/api/CLI/: CLI.cpp  CLI.h  CLI_AInHV.cpp  CLI_AInHV.h  CLI_AInLV.cpp  CLI_AInLV.h  CLI_AOut.cpp  CLI_AOut.h  CLI_AnalogInputsHV.cpp  CLI_AnalogInputsLS.cpp  CLI_AnalogInputsLV.cpp  CLI_AnalogLS.cpp  CLI_AnalogOutputs.cpp  CLI_Board.cpp  CLI_Board.h  CLI_Bus.cpp  CLI_Bus.h  CLI_BusControl.cpp  CLI_BusControl.h  CLI_BusCtrl.cpp  CLI_BusCtrl.h  CLI_Control.cpp  CLI_Control.h  CLI_Controller.cpp  CLI_Controller.h  CLI_Core.cpp  CLI_Core.h  CLI_DIn.cpp  CLI_DIn.h  CLI_DOut.cpp  CLI_DOut.h  CLI_Dc.cpp  CLI_DigitalInputs.cpp  CLI_DigitalOutputs.cpp  CLI_Led.cpp  CLI_Led.h  CLI_Module.cpp  CLI_Module.h  CLI_Relay.cpp  CLI_Relay.h  (+4 more)
components/api/Cloud/: Cloud.cpp  Cloud.hpp  CloudVariable.hpp
components/api/Cmds/: Cmds.h
components/api/Commands/: Commands.h
components/api/Console/: Console.h  ConsoleCore.cpp  ConsoleCore.h  ConsoleDiscrete.cpp  ConsoleDiscrete.h  ConsoleMaster.cpp  ConsoleMaster.h  ConsoleMixed.cpp  ConsoleMixed.h  ConsoleModule.cpp  ConsoleModule.h  ConsoleStepper.cpp  ConsoleStepper.h  MotorStepperParamCLI.cpp  MotorStepperParamCLI.h
components/api/Control/: Control.h
components/api/Controller/: Controller.cpp  Controller.h  ControllerCmd.h  ControllerTypes.h  MasterController.cpp  MasterController.h  MasterControllerCLI.cpp  SlaveController.cpp  SlaveController.h  SlaveControllerCLI.cpp
components/api/HAL/: HAL.h
components/api/Master/: Master.cpp  Master.h  MasterCLI.cpp
components/api/Module/: Module.cpp  Module.h  ModuleCLI.cpp  ModuleCLI.h  ModuleCmd.h  ModuleCommand.h  ModuleControl.cpp  ModuleControl.h  ModuleMaster.cpp  ModuleMaster.h  ModuleMasterCLI.cpp  ModuleMasterCLI.h  ModulePinout.h  ModuleSlave.cpp  ModuleSlave.h  ModuleStandalone.cpp  ModuleStandalone.h
components/api/OSAL/: OSAL.h
components/api/Slave/: Slave.cpp  Slave.h  SlaveCLI.cpp
components/api/System/: System.cpp  System.h  SystemCLI.cpp  SystemCLI.h
components/drivers/: CMakeLists.txt
components/drivers/L6470/: L6470.c  L6470.h
components/drivers/adc/: adc.h
components/drivers/ads1x4s08/: ads1x4s08.c  ads1x4s08.h
components/drivers/ads866x/: ads866x.c  ads866x.h
components/drivers/dac8760/: dac8760.c  dac8760.h
components/drivers/ledonewire/: ledonewire.c  ledonewire.h
components/drivers/m41t62/: m41t62.c  m41t62.h
components/drivers/mcp25625/: mcp25625.c  mcp25625.h
components/drivers/pcal6524/: pcal6524.c  pcal6524.h
components/drivers/powerSTEP01/: PS01.c  PS01.h  PS01_Cmd.c  PS01_Cmd.h  PS01_Hal.c  PS01_Hal.h  PS01_Param.c  PS01_Register.h  PS01_Utils.c  PS01_Utils.h  powerSTEP01.c  powerSTEP01.h
components/drivers/sc16is750/: sc16is750.c  sc16is750.h
components/drivers/stds75/: stds75.c  stds75.h
components/libraries/Netif/: CMakeLists.txt  README.md
components/middleware/: CMakeLists.txt  Global.h  HAL.h  Kconfig
components/middleware/Analog/: AnalogInput.cpp  AnalogInput.h  AnalogInputs.cpp  AnalogInputs.h  AnalogOutput.cpp  AnalogOutput.h
components/middleware/AnalogInput/: AnalogInput.h
components/middleware/Board/: Board.h
components/middleware/Bus/: Bus.h  BusCAN.cpp  BusCan.cpp  BusCan.h  BusIO.cpp  BusIO.h  BusRS.cpp  BusRS.h  BusRs.cpp  BusRs.h  Bus_CLI.cpp
components/middleware/CAN/: CAN.cpp  CAN.h
components/middleware/Cloud/: Cloud.hpp  Cloud_NTP.cpp  Cloud_Private.hpp  Var_Private.hpp  Var_basics.tpp
components/middleware/Digital/: DigitalDefs.h  DigitalInput.cpp  DigitalInput.h  DigitalInputs.cpp  DigitalInputs.h  DigitalOutput.cpp  DigitalOutput.h  DigitalOutputs.cpp  DigitalOutputs.h
components/middleware/DigitalInput/: DigitalInput.cpp  DigitalInput.h
components/middleware/DigitalOutput/: DigitalOutput.cpp  DigitalOutput.h
components/middleware/Encoder/: Encoder.cpp  Encoder.h
components/middleware/FlashLoader/: FlashLoader.cpp  FlashLoader.h
components/middleware/Led/: Led.cpp  Led.h
components/middleware/Modem/: Modem.cpp  Modem.hpp  Modem_SARA_R4.hpp  Modem_private.cpp
components/middleware/Motor/: Motor.h  MotorBLDC.cpp  MotorBLDC.h  MotorStepper.cpp  MotorStepper.h  MotorStepperParam.cpp
components/middleware/Netif/: Event_Private.h  Mac_Private.h  Netif_LTE.h
components/middleware/RS/: RS.cpp
components/middleware/RTClock/: RTClock.cpp
components/middleware/Relays/: Relays_CLI.cpp
components/middleware/Thermocouple/: Thermocouple.cpp
components/middleware/Usb/: UsbConsole.cpp  UsbConsole.h  UsbSerial.cpp  UsbSerial.h
components/middleware/WheastoneBridge/: WheastoneBridge.cpp  WheastoneBridge.h
components/middleware/_linux_arm/: Board_linux.cpp  Bus_linux.cpp  Led_linux.cpp
components/middleware/esp32/: Global.h
components/middleware/linux_arm/: Board.cpp  Bus.cpp  (+1 more)
components/openindus/: CMakeLists.txt  Kconfig.projbuild  README.md  idf_component.yml
components/system/: CMakeLists.txt  System.cpp  System.h
(+1331 files in other folders)
