set(COMPONENT_SRCS
    "Main.cpp"

    "System/System.cpp"
    "System/Master/Master.cpp"
    "System/Master/MasterCLI.cpp"
    "System/Slave/Slave.cpp"
    "System/Slave/SlaveCLI.cpp"

    "Module/Module.cpp"
    "Module/ModuleControl.cpp"
    "Module/Discrete/Discrete.cpp"
    "Module/Stepper/Stepper.cpp"
    "Module/RelayHP/RelayHP.cpp"
    "Module/Core/Core.cpp"
    "Module/Mixed/Mixed.cpp"
    "Module/AnalogLS/AnalogLS.cpp"
    "Module/Dc/Dc.cpp"

    "Middleware/Digital/Inputs/DigitalInputs.cpp"
    "Middleware/Digital/Inputs/DigitalInputsCLI.cpp"
    "Middleware/Digital/Inputs/DigitalInputsCmdHandler.cpp"
    "Middleware/Digital/Inputs/DigitalInputsCmd.cpp"
    "Middleware/Digital/Outputs/DigitalOutputs.cpp"
    "Middleware/Digital/Outputs/DigitalOutputsCLI.cpp"
    "Middleware/Digital/Outputs/DigitalOutputsCmd.cpp"
    "Middleware/Digital/Outputs/DigitalOutputsCmdHandler.cpp"
    "Middleware/Bus/BusIO.cpp"
    "Middleware/Bus/BusRS.cpp"
    "Middleware/Bus/BusCAN.cpp"
    "Middleware/Bus/BusCLI.cpp"
    "Middleware/Encoder/Encoder.cpp"
    "Middleware/Encoder/EncoderCmd.cpp"
    "Middleware/Encoder/EncoderCmdHandler.cpp"
    "Middleware/Relays/Relays.cpp"
    "Middleware/Relays/RelaysCLI.cpp"
    "Middleware/Relays/RelayCmd.cpp"
    "Middleware/Relays/RelayCmdHandler.cpp"
    "Middleware/Motor/Motor.cpp"
    "Middleware/Motor/Brushless/MotorBLDC.cpp"
    "Middleware/Motor/Stepper/MotorStepper.cpp"
    "Middleware/Motor/Stepper/MotorStepperCLI.cpp"
    "Middleware/Motor/Stepper/MotorStepperParam.cpp"
    "Middleware/Motor/Stepper/MotorStepperParamCLI.cpp"
    "Middleware/Motor/Stepper/MotorStepperCmd.cpp"
    "Middleware/Motor/Stepper/MotorStepperCmdHandler.cpp"
    "Middleware/Motor/Stepper/MotorStepperCmdCLI.cpp"
    "Middleware/Motor/Dc/MotorDc.cpp"
    "Middleware/Motor/Dc/MotorDcCLI.cpp"
    "Middleware/Motor/Dc/DcCmd.cpp"
    "Middleware/Motor/Dc/DcCmdHandler.cpp"
    "Middleware/Usb/UsbConsole.cpp"
    "Middleware/Usb/UsbSerial.cpp"
    "Middleware/FlashLoader/FlashLoader.cpp"
    "Middleware/Led/Led.cpp"
    "Middleware/Led/LedCLI.cpp"
    "Middleware/RTClock/RTClock.cpp"
    "Middleware/RTClock/RTClockCLI.cpp"
    "Middleware/Analog/Outputs/AnalogOutputs.cpp"
    "Middleware/Analog/Outputs/AnalogOutputsCLI.cpp"
    "Middleware/Analog/Outputs/AnalogOutputsCmd.cpp"
    "Middleware/Analog/Outputs/AnalogOutputsCmdHandler.cpp"
    "Middleware/Analog/InputsLV/AnalogInputsLV.cpp"
    "Middleware/Analog/InputsLV/AnalogInputsLVCLI.cpp"
    "Middleware/Analog/InputsLV/AnalogInputsLVCmd.cpp"
    "Middleware/Analog/InputsLV/AnalogInputsLVCmdHandler.cpp"
    "Middleware/Analog/InputsHV/AnalogInputsHV.cpp"
    "Middleware/Analog/InputsHV/AnalogInputsHVCLI.cpp"
    "Middleware/Analog/InputsHV/AnalogInputsHVCmd.cpp"
    "Middleware/Analog/InputsHV/AnalogInputsHVCmdHandler.cpp"
    "Middleware/Analog/InputsLS/AnalogInputsLS.cpp"
    "Middleware/Analog/InputsLS/AnalogInputsLSCLI.cpp"
    "Middleware/Analog/InputsLS/AnalogInputsLSCmd.cpp"
    "Middleware/Analog/InputsLS/AnalogInputsLSCmdHandler.cpp"
    "Middleware/Analog/InputsLS/ADC/ADS114S0X/_ADS114S0X.cpp"
    "Middleware/Analog/InputsLS/Multiplexer/Multiplexer.cpp"
    "Middleware/Analog/InputsLS/Digipot/Digipot.cpp"
    "Middleware/Analog/InputsLS/Sensors/global_sensor.cpp"
    "Middleware/Analog/InputsLS/Sensors/RawSensor/RawSensor.cpp"
    "Middleware/Analog/InputsLS/Sensors/RTD/RTD.cpp"
    "Middleware/Analog/InputsLS/Sensors/Thermocouple/Thermocouple.cpp"
    "Middleware/Analog/InputsLS/Sensors/StrainGauge/StrainGauge.cpp"
    "Middleware/CAN/CAN.cpp"
    "Middleware/CAN/CANCLI.cpp"
    "Middleware/RS/RS.cpp"
    "Middleware/RS/RSCLI.cpp"
    "Middleware/Board/Board.cpp"
    "Middleware/Board/BoardCLI.cpp"
    "Middleware/Modem/Modem.cpp"
    "Middleware/Modem/Modem_private.cpp"

    "Cloud/Cloud.cpp"
    "Cloud/MQTT/MQTTManager.cpp"
)

set(COMPONENT_INCLUDE_DIRS
    "."
    "System"
    "System/Master"
    "System/Slave"

    "Module"
    "Module/Discrete"
    "Module/Stepper"
    "Module/Core"
    "Module/Mixed"
    "Module/RelayHP"
    "Module/Brushless"
    "Module/AnalogLS"
    "Module/Dc"

    "Middleware/Digital"
    "Middleware/Digital/Inputs"
    "Middleware/Digital/Outputs"
    "Middleware/Bus"
    "Middleware/Encoder"
    "Middleware/Relays"
    "Middleware/Analog"
    "Middleware/Analog/InputsHV"
    "Middleware/Analog/InputsLV"
    "Middleware/Analog/InputsLS"
    "Middleware/Analog/InputsLS/ADC"
    "Middleware/Analog/InputsLS/ADC/ADS114S0X"
    "Middleware/Analog/InputsLS/Multiplexer"
    "Middleware/Analog/InputsLS/Digipot"
    "Middleware/Analog/InputsLS/Sensors"
    "Middleware/Analog/InputsLS/Sensors/RawSensor"
    "Middleware/Analog/InputsLS/Sensors/RTD"
    "Middleware/Analog/InputsLS/Sensors/Thermocouple"
    "Middleware/Analog/InputsLS/Sensors/StrainGauge"
    "Middleware/Analog/Outputs"
    "Middleware/Motor"
    "Middleware/Motor/Brushless"
    "Middleware/Motor/Stepper"
    "Middleware/Motor/Dc"
    "Middleware/Usb"
    "Middleware/FlashLoader"
    "Middleware/Led"
    "Middleware/RTClock"
    "Middleware/CAN"
    "Middleware/RS"
    "Middleware/Board"
    "Middleware/Modem"

    "Cloud"
)

set(COMPONENT_PRIV_REQUIRES
    "esp_adc_cal"
    "console"
    "nvs_flash"
    "app_update"
    "fatfs"
    "sdmmc"
    "esp_rom"
    "esp_modem"
    "mqtt"
    "esp_http_client"
    "esp_https_ota"
)

set(COMPONENT_REQUIRES
    "drivers"
)

idf_component_register(
    SRCS ${COMPONENT_SRCS}
    INCLUDE_DIRS ${COMPONENT_INCLUDE_DIRS}
    PRIV_REQUIRES ${COMPONENT_PRIV_REQUIRES}
    REQUIRES ${COMPONENT_REQUIRES}
)

# component_compile_options(-std=c++17 -std=gnu++17)