set(COMPONENT_SRCS
    "Bus/BusIO.cpp"
    "Bus/BusRS.cpp"
    "Bus/BusCAN.cpp"
    "Bus/Bus_CLI.cpp"
    "Encoder/Encoder.cpp"
    "Digital/Inputs/DigitalInputs.cpp"
    "Digital/Inputs/DigitalInputs_CLI.cpp"
    "Digital/Inputs/DigitalInputsExp.cpp"
    "Digital/Inputs/DigitalInputsExp_CLI.cpp"
    "Digital/Outputs/DigitalOutputs.cpp"
    "Digital/Outputs/DigitalOutputs_CLI.cpp"
    "Digital/Outputs/DigitalOutputsExp.cpp"
    "Digital/Outputs/DigitalOutputsExp_CLI.cpp"
    "Relays/Relays.cpp"
    "Relays/Relays_CLI.cpp"
    "Motor/Motor.cpp"
    "Motor/Brushless/MotorBLDC.cpp"
    "Motor/Stepper/MotorStepper.cpp"
    "Motor/Stepper/MotorStepperCLI.cpp"
    "Motor/Stepper/MotorStepperParam.cpp"
    "Motor/Stepper/MotorStepperParamCLI.cpp"
    "Motor/Dc/MotorDc.cpp"
    "Motor/Dc/MotorDc_CLI.cpp"
    "Usb/UsbConsole.cpp"
    "Usb/UsbSerial.cpp"
    "FlashLoader/FlashLoader.cpp"
    "Led/Led.cpp"
    "Led/Led_CLI.cpp"
    "RTClock/RTClock.cpp"
    "RTClock/RTClock_CLI.cpp"
    "Analog/Outputs/AnalogOutputs.cpp"
    "Analog/Outputs/AnalogOutputs_CLI.cpp"
    "Analog/InputsLV/AnalogInputsLV.cpp"
    "Analog/InputsLV/AnalogInputsLV_CLI.cpp"
    "Analog/InputsHV/AnalogInputsHV.cpp"
    "Analog/InputsHV/AnalogInputsHV_CLI.cpp"
    "Analog/InputsLS/AnalogInputsLS.cpp"
    "Analog/InputsLS/AnalogInputsLS_CLI.cpp"
    "Analog/InputsLS/ADC/ADS114S0X/_ADS114S0X.cpp"
    "Analog/InputsLS/Multiplexer/Multiplexer.cpp"
    "Analog/InputsLS/Digipot/Digipot.cpp"
    "Analog/InputsLS/Sensors/global_sensor.cpp"
    "Analog/InputsLS/Sensors/RawSensor/RawSensor.cpp"
    "Analog/InputsLS/Sensors/RTD/RTD.cpp"
    "Analog/InputsLS/Sensors/Thermocouple/Thermocouple.cpp"
    "Analog/InputsLS/Sensors/StrainGauge/StrainGauge.cpp"
    "CAN/CAN.cpp"
    "RS/RS.cpp"
    "Board/Board.cpp"
    "Board/Board_CLI.cpp"
    "Modem/Modem.cpp"
    "Modem/Modem_private.cpp"
)

set(COMPONENT_INCLUDE_DIRS
    "."
    "Bus"
    "Encoder"
    "Digital"
    "Digital/Inputs"
    "Digital/Outputs"
    "Relays"
    "Analog"
    "Analog/InputsHV"
    "Analog/InputsLV"
    "Analog/InputsLS"
    "Analog/InputsLS/ADC"
    "Analog/InputsLS/ADC/ADS114S0X"
    "Analog/InputsLS/Multiplexer"
    "Analog/InputsLS/Digipot"
    "Analog/InputsLS/Sensors"
    "Analog/InputsLS/Sensors/RawSensor"
    "Analog/InputsLS/Sensors/RTD"
    "Analog/InputsLS/Sensors/Thermocouple"
    "Analog/InputsLS/Sensors/StrainGauge"
    "Analog/Outputs"
    "Motor"
    "Motor/Brushless"
    "Motor/Stepper"
    "Motor/Dc"
    "Usb"
    "FlashLoader"
    "Led"
    "RTClock"
    "CAN"
    "RS"
    "Board"
    "Modem"
)

set(COMPONENT_PRIV_REQUIRES

)

set(COMPONENT_REQUIRES
    "drivers"
    "esp_adc_cal"
    "console"
    "nvs_flash"
    "app_update"
    "fatfs"
    "sdmmc"
    "esp_rom"
    "esp_modem"
    "mqtt"
    "esp_http_client"
    "esp_https_ota"
)

idf_component_register(
    SRCS ${COMPONENT_SRCS}
    INCLUDE_DIRS ${COMPONENT_INCLUDE_DIRS}
    PRIV_REQUIRES ${COMPONENT_PRIV_REQUIRES}
    REQUIRES ${COMPONENT_REQUIRES}
)