set(COMPONENT_SRCS
    "api/Main.cpp"

    "api/System/System.cpp"
    "api/System/Master/Master.cpp"
    "api/System/Master/MasterCLI.cpp"
    "api/System/Slave/Slave.cpp"
    "api/System/Slave/SlaveCLI.cpp"

    "api/Module/Module.cpp"
    "api/Module/ModuleControl.cpp"
    "api/Module/Discrete/Discrete.cpp"
    "api/Module/Stepper/Stepper.cpp"
    "api/Module/RelayHP/RelayHP.cpp"
    "api/Module/Core/Core.cpp"
    "api/Module/Mixed/Mixed.cpp"
    "api/Module/AnalogLS/AnalogLS.cpp"
    "api/Module/Dc/Dc.cpp"

    "api/Middleware/Digital/Inputs/DigitalInputs.cpp"
    "api/Middleware/Digital/Inputs/DigitalInputsCLI.cpp"
    "api/Middleware/Digital/Inputs/DigitalInputsCmdHandler.cpp"
    "api/Middleware/Digital/Inputs/DigitalInputsCmd.cpp"
    "api/Middleware/Digital/Outputs/DigitalOutputs.cpp"
    "api/Middleware/Digital/Outputs/DigitalOutputsCLI.cpp"
    "api/Middleware/Digital/Outputs/DigitalOutputsCmd.cpp"
    "api/Middleware/Digital/Outputs/DigitalOutputsCmdHandler.cpp"
    "api/Middleware/Bus/BusIO.cpp"
    "api/Middleware/Bus/BusRS.cpp"
    "api/Middleware/Bus/BusCAN.cpp"
    "api/Middleware/Bus/BusCLI.cpp"
    "api/Middleware/Encoder/Encoder.cpp"
    "api/Middleware/Encoder/EncoderCmd.cpp"
    "api/Middleware/Encoder/EncoderCmdHandler.cpp"
    "api/Middleware/Relays/Relays.cpp"
    "api/Middleware/Relays/RelaysCLI.cpp"
    "api/Middleware/Relays/RelayCmd.cpp"
    "api/Middleware/Relays/RelayCmdHandler.cpp"
    "api/Middleware/Motor/Motor.cpp"
    "api/Middleware/Motor/Brushless/MotorBLDC.cpp"
    "api/Middleware/Motor/Stepper/MotorStepper.cpp"
    "api/Middleware/Motor/Stepper/MotorStepperCLI.cpp"
    "api/Middleware/Motor/Stepper/MotorStepperParam.cpp"
    "api/Middleware/Motor/Stepper/MotorStepperParamCLI.cpp"
    "api/Middleware/Motor/Stepper/MotorStepperCmd.cpp"
    "api/Middleware/Motor/Stepper/MotorStepperCmdHandler.cpp"
    "api/Middleware/Motor/Stepper/MotorStepperCmdCLI.cpp"
    "api/Middleware/Motor/Dc/MotorDc.cpp"
    "api/Middleware/Motor/Dc/MotorDcCLI.cpp"
    "api/Middleware/Motor/Dc/DcCmd.cpp"
    "api/Middleware/Motor/Dc/DcCmdHandler.cpp"
    "api/Middleware/Usb/UsbConsole.cpp"
    "api/Middleware/Usb/UsbSerial.cpp"
    "api/Middleware/FlashLoader/FlashLoader.cpp"
    "api/Middleware/Led/Led.cpp"
    "api/Middleware/Led/LedCLI.cpp"
    "api/Middleware/RTClock/RTClock.cpp"
    "api/Middleware/RTClock/RTClockCLI.cpp"
    "api/Middleware/Analog/Outputs/AnalogOutputs.cpp"
    "api/Middleware/Analog/Outputs/AnalogOutputsCLI.cpp"
    "api/Middleware/Analog/Outputs/AnalogOutputsCmd.cpp"
    "api/Middleware/Analog/Outputs/AnalogOutputsCmdHandler.cpp"
    "api/Middleware/Analog/InputsLV/AnalogInputsLV.cpp"
    "api/Middleware/Analog/InputsLV/AnalogInputsLVCLI.cpp"
    "api/Middleware/Analog/InputsLV/AnalogInputsLVCmd.cpp"
    "api/Middleware/Analog/InputsLV/AnalogInputsLVCmdHandler.cpp"
    "api/Middleware/Analog/InputsHV/AnalogInputsHV.cpp"
    "api/Middleware/Analog/InputsHV/AnalogInputsHVCLI.cpp"
    "api/Middleware/Analog/InputsHV/AnalogInputsHVCmd.cpp"
    "api/Middleware/Analog/InputsHV/AnalogInputsHVCmdHandler.cpp"
    "api/Middleware/Analog/InputsLS/AnalogInputsLS.cpp"
    "api/Middleware/Analog/InputsLS/AnalogInputsLSCLI.cpp"
    "api/Middleware/Analog/InputsLS/AnalogInputsLSCmd.cpp"
    "api/Middleware/Analog/InputsLS/AnalogInputsLSCmdHandler.cpp"
    "api/Middleware/Analog/InputsLS/ADC/ADS114S0X/_ADS114S0X.cpp"
    "api/Middleware/Analog/InputsLS/Multiplexer/Multiplexer.cpp"
    "api/Middleware/Analog/InputsLS/Digipot/Digipot.cpp"
    "api/Middleware/Analog/InputsLS/Sensors/global_sensor.cpp"
    "api/Middleware/Analog/InputsLS/Sensors/RawSensor/RawSensor.cpp"
    "api/Middleware/Analog/InputsLS/Sensors/RTD/RTD.cpp"
    "api/Middleware/Analog/InputsLS/Sensors/Thermocouple/Thermocouple.cpp"
    "api/Middleware/Analog/InputsLS/Sensors/StrainGauge/StrainGauge.cpp"
    "api/Middleware/CAN/CAN.cpp"
    "api/Middleware/CAN/CANCLI.cpp"
    "api/Middleware/RS/RS.cpp"
    "api/Middleware/RS/RSCLI.cpp"
    "api/Middleware/Board/Board.cpp"
    "api/Middleware/Board/BoardCLI.cpp"
    "api/Middleware/Modem/Modem.cpp"
    "api/Middleware/Modem/Modem_private.cpp"

    "api/Cloud/Cloud.cpp"
    "api/Cloud/MQTT/MQTTManager.cpp"

    "drivers/dac8760/dac8760.c"
    "drivers/powerSTEP01/PS01_Cmd.c"
    "drivers/powerSTEP01/PS01_Hal.c"
    "drivers/powerSTEP01/PS01_Param.c"
    "drivers/powerSTEP01/PS01_Utils.c"
    "drivers/powerSTEP01/PS01.c"
    "drivers/pcal6524/pcal6524.c"
    "drivers/m41t62/m41t62.c"
    "drivers/m41t62/STM32DriversComponents/M41T62.c"
    "drivers/sc16is750/sc16is750.c"
    "drivers/mcp25625/mcp25625.c"
    "drivers/mcp25625/DriversComponents/MCP25625.c"
    "drivers/mcp25625/DriversComponents/MCP25625_hw.c"
    "drivers/mcp25625/DriversComponents/MCP25625_hal.c"
    "drivers/stds75/stds75.c"
    "drivers/cd74hc4052/cd74hc4052.c"
    "drivers/dac/ad5413/ad5413.c"
    "drivers/adc/ads114s0x/ads114s0x.c"
    "drivers/adc/ads866x/ads866x.c"
    "drivers/drv8873/drv8873.c"
)

set(COMPONENT_INCLUDE_DIRS
    "api"
    "api/System"
    "api/System/Master"
    "api/System/Slave"

    "api/Module"
    "api/Module/Discrete"
    "api/Module/Stepper"
    "api/Module/Core"
    "api/Module/Mixed"
    "api/Module/RelayHP"
    "api/Module/Brushless"
    "api/Module/AnalogLS"
    "api/Module/Dc"

    "api/Middleware/Digital"
    "api/Middleware/Digital/Inputs"
    "api/Middleware/Digital/Outputs"
    "api/Middleware/Bus"
    "api/Middleware/Encoder"
    "api/Middleware/Relays"
    "api/Middleware/Analog"
    "api/Middleware/Analog/InputsHV"
    "api/Middleware/Analog/InputsLV"
    "api/Middleware/Analog/InputsLS"
    "api/Middleware/Analog/InputsLS/ADC"
    "api/Middleware/Analog/InputsLS/ADC/ADS114S0X"
    "api/Middleware/Analog/InputsLS/Multiplexer"
    "api/Middleware/Analog/InputsLS/Digipot"
    "api/Middleware/Analog/InputsLS/Sensors"
    "api/Middleware/Analog/InputsLS/Sensors/RawSensor"
    "api/Middleware/Analog/InputsLS/Sensors/RTD"
    "api/Middleware/Analog/InputsLS/Sensors/Thermocouple"
    "api/Middleware/Analog/InputsLS/Sensors/StrainGauge"
    "api/Middleware/Analog/Outputs"
    "api/Middleware/Motor"
    "api/Middleware/Motor/Brushless"
    "api/Middleware/Motor/Stepper"
    "api/Middleware/Motor/Dc"
    "api/Middleware/Usb"
    "api/Middleware/FlashLoader"
    "api/Middleware/Led"
    "api/Middleware/RTClock"
    "api/Middleware/CAN"
    "api/Middleware/RS"
    "api/Middleware/Board"
    "api/Middleware/Modem"

    "api/Cloud"

    "drivers"
    "drivers/dac8760"
    "drivers/powerSTEP01"
    "drivers/pcal6524"
    "drivers/m41t62"
    "drivers/sc16is750"
    "drivers/mcp25625"
    "drivers/stds75"
    "drivers/cd74hc4052"
    "drivers/dac"
    "drivers/dac/ad5413"
    "drivers/adc"
    "drivers/adc/ads866x"
    "drivers/adc/ads114s0x"
    "drivers/drv8873"
)

set(COMPONENT_PRIV_REQUIRES
    ""
)

set(COMPONENT_REQUIRES
    "console"
    "nvs_flash"
    "app_update"
    "fatfs"
    "sdmmc"
    "esp_rom"
    "esp_modem"
    "mqtt"
    "esp_http_client"
    "esp_https_ota"
    "esp_adc"
    "efuse"
    "driver"
    "esp_timer"
)

idf_component_register(
    SRCS ${COMPONENT_SRCS}
    INCLUDE_DIRS ${COMPONENT_INCLUDE_DIRS}
    PRIV_REQUIRES ${COMPONENT_PRIV_REQUIRES}
    REQUIRES ${COMPONENT_REQUIRES}
)

# component_compile_options(-std=c++17 -std=gnu++17)

# set_source_files_properties(powerSTEP01/powerSTEP01.c
#     PROPERTIES COMPILE_FLAGS
#     "-Wno-missing-field-initializers -Wno-implicit-fallthrough -Wno-maybe-uninitialized"
# )